--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,14 +46,9 @@
   "description": "### Overview",
   "main": "index.js",
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MarinaKrasnov/react-mesto-auth.git"
+    "type": "git"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MarinaKrasnov/react-mesto-auth/issues"
-  },
-  "homepage": "https://github.com/MarinaKrasnov/react-mesto-auth#readme"
+  "license": "ISC"
 }
