--- a/backend/package.json
+++ b/backend/package.json
@@ -38,4 +38,7 @@
   "keywords": [],
   "author": "Marina Krasnov",
   "license": "ISC"
+  ,
+  "homepage": "https://marina.nomorepartiesxyz.ru"
+
 }
