--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,6 @@
     "express-winston": "^4.2.0",
     "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
-    "localstorage": "^1.0.1",
     "mongoose": "^6.3.8",
     "validator": "^13.7.0",
     "winston": "^3.8.1"
@@ -28,17 +27,19 @@
     "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^1.19.4"
   },
   "description": "### Overview",
   "main": "index.js",
   "repository": {
-    "type": "git"
+    "type": "git",
+    "url": "git+https://github.com/MarinaKrasnov/express-mesto-gha.git"
   },
   "keywords": [],
   "author": "Marina Krasnov",
-  "license": "ISC"
-  ,
-  "homepage": "https://marina.nomorepartiesxyz.ru"
-
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MarinaKrasnov/express-mesto-gha/issues"
+  },
+  "homepage": "https://github.com/MarinaKrasnov/express-mesto-gha#readme"
 }
