--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-mesto-gha",
+  "name": "backend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,26 +20,21 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "lint": "npx eslint .",
-    "test": "jest"
+    "lint": "npx eslint ."
   },
   "devDependencies": {
     "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "nodemon": "^1.19.4"
+    "nodemon": "^2.0.16"
   },
   "description": "### Overview",
   "main": "index.js",
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MarinaKrasnov/express-mesto-gha.git"
+    "type": "git"
   },
   "keywords": [],
   "author": "Marina Krasnov",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MarinaKrasnov/express-mesto-gha/issues"
-  },
-  "homepage": "https://github.com/MarinaKrasnov/express-mesto-gha#readme"
+  "homepage": "https://marina.nomorepartiesxyz.ru"
 }
