--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -3,8 +3,8 @@
   "rules": {
     "no-underscore-dangle": ["error", {
       "allow": ["_id"]
-    }],
-    "comma-dangle": "off",
-    "semi": "off"
+    }]
+    /*     "comma-dangle": "off",
+        "semi": "off" */
   }
 }
